@@ -1,3 +1,9 @@
+18 May 2020: Wouter
+	- For PR #93: dynlibmod can handle reloads and deinit and inits again,
+	  with dlclose and dlopen of the library again.  Also for multiple
+	  modules.  Fix memory leak by not closing dlopened content.  Fix
+	  to allow one dynlibmod instance by unbound-checkconf.
+
 15 May 2020: Wouter
 	- Merge PR #93: Add dynamic library support.
 	- Fixed conflicts for PR #93 and make configure, yacc, lex.
